--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -10,7 +10,7 @@
 }
 /* =======================================================
 *
-* 	Template Style 
+* 	Template Style
 *
 * ======================================================= */
 body {
@@ -1909,7 +1909,7 @@ form label {
 }
 
 .main-font {
-  font-family: 'Cookie', cursive !important;
+  font-family: 'icomoon', bold !important;
 }
 
 .and-love {
