--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -606,7 +606,9 @@ figure {
   text-transform: uppercase;
   letter-spacing: 2px;
 }
-
+.timeline-map {
+  padding: 10px 0;
+}
 .timeline-body > p,
 .timeline-body > ul {
   margin-bottom: 0;
